--- a/Roles.html
+++ b/Roles.html
@@ -122,7 +122,7 @@
     <div class="header-icons">
       <a href="Strategy.html" class="header-icon-link" title="Home" aria-label="Home">
         <i class="fa-solid fa-house"></i> </a>
-      <a href="DigitalWheel.html" class="header-icon-link" title="Digital Wheel" aria-label="Digital Wheel">
+      <a href="index.html" class="header-icon-link" title="Digital Wheel" aria-label="Digital Wheel">
         <i class="fa-solid fa-circle"></i> </a>
     </div>
   </div>
