--- a/DigitalWheel.html
+++ b/DigitalWheel.html
@@ -376,7 +376,7 @@ header h1 {
     <header>The Spencer Digital Construction Wheel</header>
     <div class="container">
         <div class="left-column">
-            <a href="strategy.html" class="home-link" title="Home">
+            <a href="index.html" class="home-link" title="Home">
                 <!-- simple SVG house icon -->
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="#233e99" xmlns="http://www.w3.org/2000/svg">
                   <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
