--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <li><strong>Integrated Visualisation:</strong> Tools like augmented reality provide real-time comparisons of design versus construction, enhancing quality control.</li>
       </ul>
       <p>
-        <a href="index.html?tab=essential" class="show-more-button">
+        <a href="DigitalWheel.html?tab=essential" class="show-more-button">
           Show me more →
         </a>
       </p>
@@ -133,7 +133,7 @@
         <li><strong>Data Management:</strong> Consistent naming and embedded quantities improve traceability, ensuring accurate cost tracking and resource allocation.</li>
       </ul>
       <p>
-        <a href="index.html?tab=smart" class="show-more-button">
+        <a href="DigitalWheel.html?tab=smart" class="show-more-button">
           Show me more →
         </a>
       </p>
@@ -151,7 +151,7 @@
         <li><strong>Comprehensive Insights:</strong> Structural and energy simulations provide a complete understanding of project performance, improving decision-making.</li>
       </ul>
       <p>
-        <a href="index.html?tab=advanced" class="show-more-button">
+        <a href="DigitalWheel.html?tab=advanced" class="show-more-button">
           Show me more →
         </a>
       </p>
