--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <body>
   <div class="header">
     <h1 class="header-title">Digital Construction Strategy</h1>
-    <a href="index.html" class="wheel-button">The Wheel</a>
+    <a href="DigitalWheel.html" class="wheel-button">The Wheel</a>
   </div>
 
   <div class="container">
