--- a/DigitalWheel.html
+++ b/DigitalWheel.html
@@ -1594,7 +1594,7 @@ header h1 {
             presetDetailsPanel.style.display = 'none';
             segmentDetailsPanel.style.display = ''; // Show segment panel
             if (!data) {
-                detailsTitle.textContent = 'How to use the Digital Wheel'; detailsDescription.textContent = 'Details will appear here.';
+                detailsTitle.textContent = 'How to use the Digital Wheel'; detailsDescription.textContent = 'To use the Digital Construction Wheel, start by selecting a specific area of interest within the construction process, such as design, procurement, or asset management. The wheel will then display relevant digital technologies and methodologies applicable to that phase. By interacting with the wheel, users can delve deeper into each technology, gaining insights into its applications, benefits, and integration strategies. This tool serves as a roadmap for digital transformation, guiding users through the myriad of available technologies to enhance efficiency, collaboration, and innovation in construction projects..';
                 detailsResourcesUl.innerHTML = ''; detailsPlatformUl.innerHTML = ''; detailsEnquiryUl.innerHTML = ''; detailsProjectUl.innerHTML = '';
                 return;
             }
